--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="robots" content="noindex,nofollow">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="format-detection" content="email=no,telephone=no,address=no">
-  <link rel="stylesheet" href="work.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cssgram-cssgram.netdna-ssl.com/cssgram.min.css">
   <title>practice-work</title>
 </head>
