--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <h1>XXガス</h1>
       <nav>
         <ul>
-          <li><a href="#">トップページ</a></li>
-          <li><a href="#">会社概要</a></li>
-          <li><a href="#">事業内容</a></li>
-          <li><a href="#">採用情報</a></li>
+          <li><a href="https://ryou-official.github.io/XXgas.top/">トップページ</a></li>
+          <li><a href="https://ryou-official.github.io/XXgas.company/">会社概要</a></li>
+          <li><a href="https://ryou-official.github.io/XXgas.work/">事業内容</a></li>
+          <li><a href="https://ryou-official.github.io/XXgas.recruit/">採用情報</a></li>
           <li><a href="#">お問い合わせ</a></li>
         </ul>
       </nav>
@@ -79,10 +79,10 @@
           FAX 01-2345-6789</p>
       </div>
       <ul>
-        <li><a href="#">トップページ</a></li>
-        <li><a href="#">会社概要</a></li>
-        <li><a href="#">事業内容</a></li>
-        <li><a href="#">採用情報</a></li>
+        <li><a href="https://ryou-official.github.io/XXgas.top/">トップページ</a></li>
+        <li><a href="https://ryou-official.github.io/XXgas.company/">会社概要</a></li>
+        <li><a href="https://ryou-official.github.io/XXgas.work/">事業内容</a></li>
+        <li><a href="https://ryou-official.github.io/XXgas.recruit/">採用情報</a></li>
         <li><a href="#">お問い合わせ</a></li>
       </ul>
     </div>
